fix: add JDK 17+ jvmArgs required by Robolectric 4.17
Robolectric 4.17's AndroidInterceptors reaches into JDK internals
(jdk.internal.access, java.lang reflection, etc.) that JDK 17+'s
stronger module encapsulation blocks by default, causing every
Robolectric-backed unit test to fail with IllegalAccessException.