@@ -34,6 +34,21 @@ internal fun Project.configureAndroidLibrary(extension: LibraryExtension) {
             unitTests {
                 isIncludeAndroidResources = true
                 isReturnDefaultValues = true
+                all {
+                    // Required by Robolectric 4.17+ on JDK 17+: stronger module encapsulation
+                    // blocks the JDK internals it reaches into unless these are opened.
+                    it.jvmArgs(
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util=ALL-UNNAMED",
+                        "--add-opens=java.base/java.io=ALL-UNNAMED",
+                        "--add-opens=java.base/java.net=ALL-UNNAMED",
+                        "--add-opens=java.base/java.security=ALL-UNNAMED",
+                        "--add-opens=java.base/java.text=ALL-UNNAMED",
+                        "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    )
+                }
             }
         }
     }
